# bindings_openair

./: README.md
data/: decal_base_0.mat  openair_bindings.world
source/: AppEditorLogic.cpp  AppSystemLogic.cpp  AppSystemLogic.h  AppWorldLogic.cpp  Bindings.h  BonusBindings.h  CMakeLists.txt  Common.cpp  Common.h  FunctionTraits.h  UndoStack.cpp  UndoStack.h
